<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.csustan.cs4950.sqlwithmenu.MainActivity">
    <item
        android:id="@+id/action_insert"
        android:title="@string/insert"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_update"
        android:title="@string/update"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_create_table"
        android:title="@string/create_table"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_table"
        android:title="@string/delete_table"
        app:showAsAction="ifRoom" />
</menu>
