<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/lblID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id" />

    <EditText
        android:id="@+id/inputID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/lblID"
        android:layout_marginLeft="70dp"
        android:layout_toRightOf="@id/lblID"
        android:ems="10"
        android:hint="Enter ID"
        android:inputType="number" />

    <TextView
        android:id="@+id/lblPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblID"
        android:layout_marginTop="20dp"
        android:text="@string/point" />

    <EditText
        android:id="@+id/inputPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputID"
        android:layout_alignBaseline="@id/lblPoint"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@id/lblPoint"
        android:ems="10"
        android:hint="Enter Point"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblPoint"
        android:layout_marginTop="50dp"
        android:onClick="update"
        android:text="@string/update" />
</RelativeLayout>
